--- a/Project_1/style.css
+++ b/Project_1/style.css
@@ -69,4 +69,15 @@ footer{
 }
 footer p{
     text-align: end;
+    
+}
+footer p a{
+    text-decoration: none;
+    color: inherit;
+}
+footer p a:hover{
+    color: red;
+    /* text-decoration: underline; */
+    /* transition: all 0.3s ease; */
+    transform: scale(1.1);
 }
